[package]
name = "v8-cpuprofile-split"
version = "0.1.0"
authors = ["Kris Selden <kris.selden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
structopt = "0.3"
serde_json = "1.0"
v8-cpuprofile = { path = "../v8-cpuprofile" }
rayon = "1.0"
