[package]
name = "v8-cpuprofile"
version = "0.1.0"
authors = ["Kris Selden <kris.selden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "^1.0", default-features = false, features = ["alloc", "raw_value"] }
hashbrown = "^0.9.1"
derive_more = "^0.99.11"
